tests/negative/gold/uninitialized_field2_test.gold
tests/negative/uninitialized_field2_test.toit:91:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
tests/negative/uninitialized_field2_test.toit:16:14: error: Field 'field' must be initialized before first use
    some_fun field
             ^~~~~
tests/negative/uninitialized_field2_test.toit:21:16: error: Field 'field' must be initialized before first use
      some_fun field
               ^~~~~
tests/negative/uninitialized_field2_test.toit:28:16: error: Field 'field' must be initialized before first use
      some_fun field
               ^~~~~
tests/negative/uninitialized_field2_test.toit:32:10: error: Field 'field' must be initialized before first use
    field++
         ^~
tests/negative/uninitialized_field2_test.toit:35:5: error: Field 'field' not initialized on all paths before implicit super-call
    some_fun this
    ^~~~~~~~
tests/negative/uninitialized_field2_test.toit:41:12: error: Field 'field' must be initialized before first use
      field++
           ^~
tests/negative/uninitialized_field2_test.toit:47:7: error: Field 'field' must be initialized before first use
      field
      ^~~~~
tests/negative/uninitialized_field2_test.toit:52:7: error: Field 'field' must be initialized before first use
      field
      ^~~~~
tests/negative/uninitialized_field2_test.toit:57:7: error: Field 'field' must be initialized before first use
      field
      ^~~~~
tests/negative/uninitialized_field2_test.toit:62:7: error: Field 'field' must be initialized before first use
      field
      ^~~~~
tests/negative/uninitialized_field2_test.toit:69:7: error: Field 'field' must be initialized before first use
      field
      ^~~~~
tests/negative/uninitialized_field2_test.toit:73:28: error: Field 'field' must be initialized before first use
    for i := 0; i < 2; i < field:
                           ^~~~~
Compilation failed.
